Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_doctor_view_today_1.xhtml
+++ b/src/main/webapp/channel/channel_doctor_view_today_1.xhtml
@@ -56,7 +56,7 @@
                     </p:column>   
                     <p:column sortBy="#{bs.consultant.person.name}">
                         <f:facet name="header">
-                            <p:outputLabel value="Arrival Time" style="float: left;"/>
+                            <p:outputLabel value="Arrival Time" style="float: left;color: green;"/>
                         </f:facet>
                         <p:outputLabel value="#{a.recordTimeStamp}" >
                             <f:convertDateTime pattern="hh:mm:ss a" />
@@ -64,7 +64,7 @@
                     </p:column>   
                     <p:column sortBy="#{bs.consultant.person.name}">
                         <f:facet name="header">
-                            <p:outputLabel value="Departure Time" style="float: left;"/>
+                            <p:outputLabel value="Departure Time" style="float: left;color: red;"/>
                         </f:facet>
                         <p:outputLabel value="#{a.approvedAt}" >
                             <f:convertDateTime pattern="hh:mm:ss a" />
