--- a/src/main/webapp/channel/institutions_udate_credit_limit.xhtml
+++ b/src/main/webapp/channel/institutions_udate_credit_limit.xhtml
@@ -89,7 +89,7 @@
                                         </p:outputLabel>
                                         <h:outputText value="Memo" >                                        
                                         </h:outputText>
-                                        <h:inputTextarea  value="#{institutionController.agency.descreption}"  >
+                                        <h:inputTextarea  value="#{institutionController.current.descreption}"  >
                                         </h:inputTextarea>
                                     </h:panelGrid>
                                     <h:panelGrid id="gpDetailButtons" columns="2">
