--- a/src/main/webapp/reportCashier/report_cashier_summery_by_user.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_summery_by_user.xhtml
@@ -32,6 +32,9 @@
                             <h:outputLabel value="#{commonReport.toDate}">
                                 <f:convertDateTime pattern="dd MMM yyyy hh:mm:ss a"/>
                             </h:outputLabel>
+                            <br/>
+                            <h:outputLabel value="Cachier : #{sessionController.loggedUser.webUserPerson.name} " />
+                            
                             <p:commandButton id="btnRefresh" ajax="false" value="Refresh" rendered="#{sessionController.institutionPreference.applicationInstitution ne 'Ruhuna'}"
                                              styleClass="noPrintButton" style="float: right;"
                                              action="#{commonReport.createCashierTableByUser()}" />  
@@ -50,7 +53,7 @@
                             </p:commandButton>
                         </f:facet>
                         <f:facet name="footer">
-                            <h:outputLabel style="float: right" value="Cachier : #{sessionController.loggedUser.webUserPerson.name} " />
+                            
                         </f:facet>
 
 
@@ -638,7 +641,7 @@
                         <br/>
                     </div>
 
-                    <p:panel>
+                    <p:panel rendered="#{commonReport.userPettyPaymentBills.bills.size()>0 or commonReport.userPettyPaymentCancelBills.bills.size()>0}">
                         <f:facet name="header"> 
                             <h:outputLabel value="#{commonReport.webUser.institution.name}"/><br/>
                             <h:outputLabel value="#{commonReport.webUser.webUserPerson.name}"/>
