Signed-off-by: Ravisarani <ravisaraniranawaka@gmail.com>

--- a/src/main/webapp/opd_service.xhtml
+++ b/src/main/webapp/opd_service.xhtml
@@ -76,6 +76,8 @@
                             <f:facet name="header" >
 
                                 <h:outputLabel value="Edit Details" ></h:outputLabel>
+                                <h:outputLabel value="Active" rendered="#{!serviceController.current.inactive}" style="color: green;"></h:outputLabel>
+                                <h:outputLabel value="Inactive" rendered="#{serviceController.current.inactive}" style="color: red;"></h:outputLabel>
                                 <p:commandButton style="float:right;" id="btnSave" value="Save"  action="#{serviceController.saveSelected()}" styleClass="buttons"
                                                  ajax="false" >
                                 </p:commandButton>
@@ -149,6 +151,9 @@
                                         <f:selectItem itemLabel="Please select Session Numbering"/>
                                         <f:selectItems value="#{serviceController.sessionNumberType}"/>
                                     </p:selectOneMenu>
+                                    
+                                    <h:outputText value="" ></h:outputText>
+                                    <p:selectBooleanCheckbox value="#{serviceController.current.inactive}" itemLabel="Service Inactive"/>
                                     <h:outputText value="" ></h:outputText>
                                     <p:selectBooleanCheckbox value="#{serviceController.current.userChangable}" itemLabel="Can change Rate"/>
 
