--- a/src/main/webapp/reportLab/report_lab_investigation_bill_list.xhtml
+++ b/src/main/webapp/reportLab/report_lab_investigation_bill_list.xhtml
@@ -105,7 +105,7 @@
 
                         <p:columnGroup type="footer">
                             <p:row>
-                                <p:column footerText="Total" style=" text-align: left;">
+                                <p:column colspan="3" footerText="Total" style=" text-align: left;">
                                     <f:facet name="footer">
                                         <h:outputLabel value="Total"/>
                                     </f:facet>
