Signed-off-by: lahirumadushanka2100 <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/channel/institutions.xhtml
+++ b/src/main/webapp/channel/institutions.xhtml
@@ -104,6 +104,9 @@
                                                 <h:outputText id="lblPhone" value="Phone" ></h:outputText>
                                                 <h:inputText autocomplete="off" id="txtPhone" value="#{institutionController.agency.phone}"  ></h:inputText>
                                                 
+                                                <h:outputText id="lblMemo" value="Memo" ></h:outputText>
+                                                <h:inputTextarea id="txtMemo" value="#{institutionController.agency.descreption}"  ></h:inputTextarea>
+                                                
                                                 <h:outputText id="lblMobile" value="Moble" ></h:outputText>
                                                 <h:inputText autocomplete="off" id="txtMobile" value="#{institutionController.agency.mobile}"  ></h:inputText>
 
