Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/resources/channel/channelRecipt_ruhunu_1.xhtml
+++ b/src/main/webapp/resources/channel/channelRecipt_ruhunu_1.xhtml
@@ -209,7 +209,7 @@
 
                                 </tr>
 
-                                <tr>
+<!--                                <tr>
                                     <td>
                                         <h:outputLabel value="Hospital Fee" ></h:outputLabel>
                                     </td>
@@ -220,9 +220,9 @@
                                         <h:outputLabel value=":" ></h:outputLabel>
                                     </td>
                                     <td>
-<!--                                        <h:outputLabel value="#{cc.attrs.bill.netTotal-cc.attrs.bill.staffFee}" >
+                                        <h:outputLabel value="#{cc.attrs.bill.netTotal-cc.attrs.bill.staffFee}" >
                                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
-                                        </h:outputLabel>-->
+                                        </h:outputLabel>
                                         <h:outputLabel value="#{cc.attrs.bill.vatPlusHosFee}" >
                                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                         </h:outputLabel>
@@ -241,38 +241,38 @@
                                         <h:outputLabel value=":" ></h:outputLabel>
                                     </td>
                                     <td>
-<!--                                        <h:outputLabel value="#{cc.attrs.bill.staffFee}" >
-                                            <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
-                                        </h:outputLabel>-->
-                                        <h:outputLabel value="#{cc.attrs.bill.vatPlusStaffFee}" >
+                                        <h:outputLabel value="#{cc.attrs.bill.staffFee}" >
                                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                         </h:outputLabel>
-                                    </td>
-
-                                </tr>
-
-<!--                                <tr>
-                                    <td>
-                                        <h:outputLabel value="Vat(15%)" ></h:outputLabel>
-                                    </td>
-                                    <td>
-                                        <p:spacer width="10" ></p:spacer>
-                                    </td>
-                                    <td>
-                                        <h:outputLabel value=":" ></h:outputLabel>
-                                    </td>
-                                    <td>
-                                        <h:outputLabel value="#{cc.attrs.bill.vat}" >
+                                        <h:outputLabel value="#{cc.attrs.bill.vatPlusStaffFee}" >
                                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                         </h:outputLabel>
                                     </td>
 
                                 </tr>-->
 
+                                <!--                                <tr>
+                                                                    <td>
+                                                                        <h:outputLabel value="Vat(15%)" ></h:outputLabel>
+                                                                    </td>
+                                                                    <td>
+                                                                        <p:spacer width="10" ></p:spacer>
+                                                                    </td>
+                                                                    <td>
+                                                                        <h:outputLabel value=":" ></h:outputLabel>
+                                                                    </td>
+                                                                    <td>
+                                                                        <h:outputLabel value="#{cc.attrs.bill.vat}" >
+                                                                            <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
+                                                                        </h:outputLabel>
+                                                                    </td>
+                                
+                                                                </tr>-->
+
                                 <tr>
                                     <td>
                                         <b>
-                                            <h:outputLabel value="Total" ></h:outputLabel>
+                                            <h:outputLabel value="Total Fee" ></h:outputLabel>
                                         </b>
                                     </td>
                                     <td>
@@ -351,6 +351,13 @@
                                     </td>
                                     <td>
                                         <h:outputLabel value="#{sessionController.loggedUser.code}" rendered="#{cc.attrs.bill.creater ne sessionController.loggedUser}"></h:outputLabel>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td colspan="4">
+                                        <P>
+                                            <sup>*</sup>Note : Above bill inclusive of Hospital Charges, Professional fee &amp; Government Taxes.  
+                                        </P>
                                     </td>
                                 </tr>
 
