Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -918,7 +918,7 @@
                                 </h:panelGrid>
                                 <h:panelGrid columns="2">
                                     <h:outputLabel value="Refundable Total : " style="font-weight: bold;color: red;"/>
-                                    <h:outputLabel id="tot" value="#{channelBillController.refundableTotal * 1.15}" style="font-weight: bold;color: red;">
+                                    <h:outputLabel id="tot" value="#{channelBillController.refundableTotal}" style="font-weight: bold; color: red;">
                                         <f:convertNumber pattern="#,###0.00"  />
                                     </h:outputLabel>
                                 </h:panelGrid>
