--- a/src/main/webapp/inward/inward_fee_list.xhtml
+++ b/src/main/webapp/inward/inward_fee_list.xhtml
@@ -16,7 +16,7 @@
                     <p:commandButton value="Reset" action="#{inwardReportController1.processForItemsWithInwardMatrix}" ajax="false" ></p:commandButton>
                     <p:commandButton value="Calculate Inward Prices" ajax="false" action="#" ></p:commandButton>
                     <p:autoComplete value="#{inwardReportController1.department}" 
-                                    forceSelection="true"
+                                    forceSelection="true" placeholder="Select Department"
                                     completeMethod="#{departmentController.completeDept}" 
                                     var="dep" itemLabel="#{dep.name}" itemValue="#{dep}" >
                         <p:column>
