--- a/src/main/webapp/resources/channel/channelRecipt_ruhunu_1.xhtml
+++ b/src/main/webapp/resources/channel/channelRecipt_ruhunu_1.xhtml
@@ -209,7 +209,7 @@
 
                                 </tr>
 
-<!--                                <tr>
+                                <tr>
                                     <td>
                                         <h:outputLabel value="Hospital Fee" ></h:outputLabel>
                                     </td>
@@ -223,9 +223,9 @@
                                         <h:outputLabel value="#{cc.attrs.bill.netTotal-cc.attrs.bill.staffFee}" >
                                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                         </h:outputLabel>
-                                        <h:outputLabel value="#{cc.attrs.bill.vatPlusHosFee}" >
+<!--                                        <h:outputLabel value="#{cc.attrs.bill.vatPlusHosFee}" >
                                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
-                                        </h:outputLabel>
+                                        </h:outputLabel>-->
                                     </td>
 
                                 </tr>
@@ -244,30 +244,30 @@
                                         <h:outputLabel value="#{cc.attrs.bill.staffFee}" >
                                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                         </h:outputLabel>
-                                        <h:outputLabel value="#{cc.attrs.bill.vatPlusStaffFee}" >
+<!--                                        <h:outputLabel value="#{cc.attrs.bill.vatPlusStaffFee}" >
+                                            <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
+                                        </h:outputLabel>-->
+                                    </td>
+
+                                </tr>
+
+                                <tr>
+                                    <td>
+                                        <h:outputLabel value="Government Taxes" rendered="#{cc.attrs.bill.vat ne 0.0}"></h:outputLabel>
+                                    </td>
+                                    <td>
+                                        <p:spacer width="10" rendered="#{cc.attrs.bill.vat ne 0.0}"></p:spacer>
+                                    </td>
+                                    <td>
+                                        <h:outputLabel value=":" rendered="#{cc.attrs.bill.vat ne 0.0}"></h:outputLabel>
+                                    </td>
+                                    <td>
+                                        <h:outputLabel value="#{cc.attrs.bill.vat}" rendered="#{cc.attrs.bill.vat ne 0.0}">
                                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                         </h:outputLabel>
                                     </td>
 
-                                </tr>-->
-
-                                <!--                                <tr>
-                                                                    <td>
-                                                                        <h:outputLabel value="Vat(15%)" ></h:outputLabel>
-                                                                    </td>
-                                                                    <td>
-                                                                        <p:spacer width="10" ></p:spacer>
-                                                                    </td>
-                                                                    <td>
-                                                                        <h:outputLabel value=":" ></h:outputLabel>
-                                                                    </td>
-                                                                    <td>
-                                                                        <h:outputLabel value="#{cc.attrs.bill.vat}" >
-                                                                            <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
-                                                                        </h:outputLabel>
-                                                                    </td>
-                                
-                                                                </tr>-->
+                                </tr>
 
                                 <tr>
                                     <td>
@@ -353,13 +353,13 @@
                                         <h:outputLabel value="#{sessionController.loggedUser.code}" rendered="#{cc.attrs.bill.creater ne sessionController.loggedUser}"></h:outputLabel>
                                     </td>
                                 </tr>
-                                <tr>
+<!--                                <tr>
                                     <td colspan="4">
                                         <P>
                                             <sup>*</sup>Note : Above bill inclusive of Hospital Charges, Professional fee &amp; Government Taxes.  
                                         </P>
                                     </td>
-                                </tr>
+                                </tr>-->
 
                             </table>
                         </div>
