Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_doctor_view_today_all_1.xhtml
+++ b/src/main/webapp/channel/channel_doctor_view_today_all_1.xhtml
@@ -24,7 +24,7 @@
                         <h:outputLabel value="To Date"/>
                         <p:calendar value="#{channelReportController.toDate}" navigator="true" pattern="dd MMM yyyy hh:mm:ss a" >
                         </p:calendar>
-                        <h:panelGrid columns="2" >
+                        <h:panelGrid columns="2" rendered="#{webUserController.hasPrivilege('Developers')}">
                             <h:outputText id="output" value="Percentage #{channelReportController.reportKeyWord.from} % " />
                             <h:inputHidden id="txt2" value="#{channelReportController.reportKeyWord.from}" />
                         </h:panelGrid>
