--- a/src/main/webapp/store/store_adjustment_department.xhtml
+++ b/src/main/webapp/store/store_adjustment_department.xhtml
@@ -24,7 +24,7 @@
                                 <h:outputLabel value="Item" ></h:outputLabel>
                                 <p:autoComplete   forceSelection="true"  id="acStock" value="#{storeAdjustmentController.stock}" 
                                                   converter="stockCon" 
-                                                  completeMethod="#{storeController.completeAllStocks}" var="i" itemLabel="#{i.itemBatch.item.name}" itemValue="#{i}" >
+                                                  completeMethod="#{storeController.completeAllStocksWithZero}" var="i" itemLabel="#{i.itemBatch.item.name}" itemValue="#{i}" >
                                     <p:column headerText="Item">
                                         <h:outputLabel value="#{i.itemBatch.item.name}" ></h:outputLabel>
                                     </p:column>
