--- a/src/main/webapp/store/store_report_department_stock_by_batch.xhtml
+++ b/src/main/webapp/store/store_report_department_stock_by_batch.xhtml
@@ -66,7 +66,7 @@
 
                         <h:panelGroup id="gpBillPreview"  styleClass="noBorder summeryBorder" style="min-width: 100%!important;">
 
-                            <p:dataTable id="tbl" rowIndexVar="ii" rowStyleClass="#{i.stock eq 0 ?'noDisplayRow' : ''}" value="#{storeReportsStock.stocks}" var="i"  >
+                            <p:dataTable id="tbl" rowIndexVar="ii"  value="#{storeReportsStock.stocks}" var="i"  >
                                 <f:facet name="header">
                                     <h:outputLabel value="#{storeReportsStock.department.name} : Department Stock By Batch"/> 
                                     <h:outputLabel value="#{storeReportsStock.category.name}"  style=" white-space:pre-line;"/> 
