--- a/src/main/webapp/reportLab/report_lab_investigation_bill_list.xhtml
+++ b/src/main/webapp/reportLab/report_lab_investigation_bill_list.xhtml
@@ -75,7 +75,7 @@
                             <f:facet name="header" >
                                 <p:outputLabel value="Patient" />
                             </f:facet>
-                            <p:outputLabel value="#{b4.patient.person.name}" />                                    
+                            <p:outputLabel value="#{b.patient.person.name}" />                                    
                         </p:column> 
                         <p:column style="text-align: left;" >
                             <f:facet name="header" >
