--- a/src/main/webapp/channel/report_cashier_summery_with_fee-type.xhtml
+++ b/src/main/webapp/channel/report_cashier_summery_with_fee-type.xhtml
@@ -128,6 +128,13 @@
                                 </p:column>
                                 <p:column style="text-align: right;" >
                                     <f:facet name="header" >
+                                        <p:outputLabel value="Value" />
+                                    </f:facet>
+                                    <p:outputLabel value="#{b.feeValue}" >
+                                    </p:outputLabel>
+                                </p:column>
+                                <p:column style="text-align: right;" >
+                                    <f:facet name="header" >
                                         <p:outputLabel value="Payment Method" />
                                     </f:facet>
                                     <p:outputLabel value="#{b.bill.paymentMethod}" >
