--- a/src/main/webapp/lab_package_item.xhtml
+++ b/src/main/webapp/lab_package_item.xhtml
@@ -18,7 +18,7 @@
 
                     <h:panelGrid columns="1" >
                         <h:selectOneListbox  id="lstSelect"   size="10" value="#{packageItemController.currentPackege}" style="min-width: 223px">
-                            <f:selectItems  value="#{packageNameController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                            <f:selectItems  value="#{packageNameController.withoutInativeItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
                             <f:ajax render="gpDetail" execute="lstSelect" >
                             </f:ajax>
                         </h:selectOneListbox>
