Web Service Signed-off-by: Dushan Maduranga <Dushan Maduranga>

--- a/src/main/webapp/admin_doctor_consultant.xhtml
+++ b/src/main/webapp/admin_doctor_consultant.xhtml
@@ -59,6 +59,8 @@
                                     </p:selectOneMenu>
                                     <h:outputText  value="Name" />
                                     <p:inputText autocomplete="off" value="#{consultantController.current.person.name}"  />
+                                    <h:outputText  value="Code" />
+                                    <p:inputText autocomplete="off" value="#{consultantController.current.code}"  />
                                     <h:outputText  value="Phone" />
                                     <p:inputMask mask="999-999999" value="#{consultantController.current.person.phone}"  />
                                     <h:outputText  value="Fax" />
