Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/bill_all_view.xhtml
+++ b/src/main/webapp/bill_all_view.xhtml
@@ -538,6 +538,25 @@
                             </p:panel>
                         </p:panel>
                     </p:panel>
+                    <h:panelGroup id="gpBillPreview" >
+
+                        <p:commandButton value="Print" styleClass="noPrintButton" ajax="false" action="#" >
+                            <p:printer target="gpBillPreview" ></p:printer>
+                        </p:commandButton>
+
+                        <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'FiveFivePaper'}">
+                            <h:panelGroup rendered="#{!sessionController.institutionPreference.pharmacyBillPrabodha}">
+                                <bi:staffBill_1  controller="#{channelSearchController}" bill="#{billSearch.billSearch}" />
+                            </h:panelGroup>
+                        </h:panelGroup>
+
+
+                        <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'PosPaper'}">
+                            <h:panelGroup rendered="#{sessionController.institutionPreference.pharmacyBillPrabodha}" > 
+                                <bi:paymentReciptPosDouble controller="#{channelSearchController}" bill="#{billSearch.billSearch}" />
+                            </h:panelGroup>
+                        </h:panelGroup>
+                    </h:panelGroup>
 
                 </h:form>
             </ui:define>
